--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
     border-bottom:5px solid white;
 }
 
-a {
+.nav-container a {
     text-decoration: none;
     color: white;
 
@@ -55,7 +55,6 @@ a {
     flex-direction:column;
     justify-content:flex-end;
     align-items:flex-end;
-    /*how do I center h2 and h3? align-content doesn't do anything*/
  }
 
 .h2h3-container {
