--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,14 @@
 /*Setting the font for the body*/
 body {
     font-family: Helvetica, Arial, sans-serif;
+    background-color:rgb(240, 239, 239);
 }
 
 /*Header styles*/
 .header-container {
     display: flex;
     flex-flow: row wrap;
-    background-color: grey;
+    background-color: rgb(82, 81, 81);
     justify-content: space-between;
     align-items: center;
     padding: 25px 25px 25px 0px; 
@@ -21,6 +22,7 @@ body {
 
 .header-container h1 {
     background-color:white;
+    color:rgb(82, 81, 81);
     padding: 0.25em .25em 0.25em 1.5em;
     font-size: 2.5em;
     
@@ -67,11 +69,49 @@ body {
     text-align: center;
  }
 
-h3 {
-    color: grey;
+ .h2h3-container h2 {
+     color:rgb(82, 81, 81)
+ }
 
+.h2h3-container h3 {
+    color: grey;
 }
 
+/*Main Container*/
+/*code for main container goes here*/
+
+/*Footer Container*/
+.footer-container {
+    display:flex;
+}
+
+.footer-container h2 {
+    border-right:5px solid rgb(82, 81, 81);
+    flex: 25%;
+    text-align:right;
+    font-size:50px;
+    color: rgb(82, 81, 81);
+    padding-right:5px;
+    
+}
+
+.footer-container ul {
+    flex: 75%;
+    /*turning ul into flex-box*/
+    display:flex;
+    justify-content:space-evenly;
+    align-items: center;
+}
+
+.footer-container li{
+    list-style-type:none;
+    font-size: 1.25em;
+}
+
+.footer-container a {
+    text-decoration:none;
+    color: rgb(82, 81, 81);
+}
 
 
 
