--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,75 +6,58 @@
 
 /*Setting the font for the body*/
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color:rgb(240, 239, 239);
 }
 
 /*Header styles*/
 .header-container {
-    display: flex;
-    flex-flow: row wrap;
-    background-color: rgb(82, 81, 81);
-    justify-content: space-between;
-    align-items: center;
-    padding: 25px 25px 25px 0px; 
-}
-
-.header-container h1 {
-    background-color:white;
-    color:rgb(82, 81, 81);
-    padding: 0.25em .25em 0.25em 1.5em;
-    font-size: 2.5em;
-    
-}
-
-.nav-container ul {
-    padding: 0 1.5em 0 0;
-}
-.nav-container li {
-    list-style-type: none;
-    display: inline-block;
-    padding: 0.5em;
-    font-size: 1.25em;
-    font-weight: bold;
-    border-bottom:5px solid white;
-}
-
-.nav-container a {
-    text-decoration: none;
-    color: white;
-
-}
-
-/*Subtitle style*/
-.subtitle-container {
     background-image: url("../images/multi_dim_image.jpg");
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 200px;
+    height: 350px;
+
     display: flex;
-    flex-direction:column;
-    justify-content:flex-end;
+    flex-flow: column;
+    justify-content:space-around;
     align-items:flex-end;
  }
 
-.h2h3-container {
-    margin-right: 50px;    /*what is the best way to do length? getting confused with px em, etc.*/
-    margin-bottom: 30px;
-    padding-top:10px;
-    width: 400px;
-    height: 65px;
-    background-color: white;
+.name h1{
+    color:rgb(82, 81, 81);
+    font-size:3.5em;
+    margin-right: 1vw;
+}
+
+.catch-phrase {
+    margin-right: 1vw;
     text-align: center;
- }
+}
 
- .h2h3-container h2 {
-     color:rgb(82, 81, 81)
- }
+.catch-phrase h2 {
+    color:red;
+    font-size:20px;
+}
 
-.h2h3-container h3 {
-    color: grey;
+.catch-phrase h3 {
+    color:red;
+    font-size:15px;
+}
+
+.nav-container li {
+    list-style-type: none;
+    display: inline-block;
+    margin-right:1vw;
+    font-size: 1em;
+    font-weight: bold;
+    border-bottom:5px solid rgb(82, 81, 81);
+}
+
+.nav-container a {
+    text-decoration: none;
+    color: rgb(82, 81, 81);
+
 }
 
 /*Main Container*/
