--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 /*Setting the font for the body*/
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color:rgb(240, 239, 239);
+    background-color:rgb(228, 228, 228);
 }
 
 /*Header styles*/
@@ -17,15 +17,15 @@ body {
     background-position: center;
     width: 100%;
     height: 350px;
-
+    /*turn header into flexbox*/
     display: flex;
     flex-flow: column;
     justify-content:space-around;
     align-items:flex-end;
  }
-
+    /*formatting items within the header flex-box*/
 .name h1{
-    color:rgb(82, 81, 81);
+    color:red;
     font-size:3.5em;
     margin-right: 1vw;
 }
@@ -36,12 +36,12 @@ body {
 }
 
 .catch-phrase h2 {
-    color:red;
+    color:rgb(82, 81, 81);
     font-size:20px;
 }
 
 .catch-phrase h3 {
-    color:red;
+    color:rgb(82, 81, 81);
     font-size:15px;
 }
 
@@ -51,7 +51,7 @@ body {
     margin-right:1vw;
     font-size: 1em;
     font-weight: bold;
-    border-bottom:5px solid rgb(82, 81, 81);
+    border-bottom:2px solid red;
 }
 
 .nav-container a {
@@ -60,47 +60,99 @@ body {
 
 }
 
-/*Main Container*/
-/*code for main container goes here*/
-
-/*Footer Container*/
-.footer-container {
+/*Main container styles*/
+.main-container {
     display:flex;
+    flex-direction:column;
+    justify-content: space-evenly;
+
+    height:900px;
+    margin-right: 2.5%;
+    margin-left: 2.5%;
 }
 
-.footer-container h2 {
-    border-right:5px solid rgb(82, 81, 81);
-    flex: 25%;
+.main-container h2 {
+    width: 15%;
+    padding-top: 10px;
+    padding-right:15px;
     text-align:right;
-    font-size:50px;
-    color: rgb(82, 81, 81);
-    padding-right:5px;
-    
+
 }
 
-.footer-container ul {
-    flex: 75%;
-    /*turning ul into flex-box*/
+.main-container div {
+    width:80%;
+    padding-top: 10px;
+    padding-left:15px;
+}
+
+.aboutme-container,
+.work-container,
+.contactme-container {
     display:flex;
+    flex: row wrap;
+    margin-top:10px;
+    margin-bottom:15px;
+}
+
+.aboutme-container {
+    height: 20%;
+}
+
+.aboutme-container h2,
+.work-container h2,
+.contactme-container h2 {
+    color:rgb(82, 81, 81);
+    font-size:2em;
+    border-right: 2px double red;
+}
+
+.aboutme-container div,
+.work-container div,
+.contactme-container div {
+    color:rgb(82, 81, 81)
+}
+
+.work-container {
+    height: 70%;
+}
+
+
+.contactme-container {
+    height: 10%;
+}
+
+.contactinfo-container {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+}
+
+.contactinfo-container ul{
+    display: flex;
     justify-content:space-evenly;
-    align-items: center;
 }
 
-.footer-container li{
+.contactinfo-container li {
     list-style-type:none;
-    font-size: 1.25em;
+    display:inline-block;
+    align-items: center;
+    align-content:center;
 }
 
-.footer-container a {
+.contactinfo-container a {
     text-decoration:none;
     color: rgb(82, 81, 81);
+    font-size: 20px;
 }
 
+/*Tablets - header changes*/
+@media screen and (max-width: 992px) {
+     .header-container {
+        
+        background-color: black;
 
-
-
-
-
+    }
+}
 
 
 /*bottom to top anchor cover - ideas from googling - having trouble with this part
