--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,18 +11,27 @@ body {
 }
 
 /*Header styles*/
+.background-image {
+ background-image: url("../images/multi_dim_image.jpg");
+ background-size: cover;
+ background-position: center;
+ width: 100%;
+ height: 350px;
+}
+
+/*Hide DIV with aria-label inside so it doesn't take up space in layout*/
+.hide {
+    display:hidden;
+}
+
 .header-container {
-    background-image: url("../images/multi_dim_image.jpg");
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 350px;
     /*turn header into flexbox*/
     display: flex;
     flex-flow: column;
-    justify-content:space-around;
+    justify-content:space-evenly;
     align-items:flex-end;
- }
+ } 
+
     /*formatting items within the header flex-box*/
 .name h1{
     color:red;
@@ -31,20 +40,24 @@ body {
 }
 
 .catch-phrase {
-    margin-right: 1vw;
     text-align: center;
 }
 
 .catch-phrase h2 {
     color:rgb(82, 81, 81);
     font-size:20px;
+    margin-right:1vw;
 }
 
 .catch-phrase h3 {
     color:rgb(82, 81, 81);
     font-size:15px;
+    margin-right:1vw;
 }
-
+    /*Turning nav-ul into a flex box*/
+.nav-container ul {
+    display: flex;
+}
 .nav-container li {
     list-style-type: none;
     display: inline-block;
@@ -145,14 +158,56 @@ body {
     font-size: 20px;
 }
 
-/*Tablets - header changes*/
+/*Changes to layout when screen size is between 576px and 992px*/
 @media screen and (max-width: 992px) {
-     .header-container {
-        
-        background-color: black;
+    /*Changing header display*/
+    .header-container {
+        justify-content:space-between;
+    }
+    /*Changing name display*/ 
+    .name {
+         width:100%;
+         background:black
+     }
+     .name h1 {
+         text-align:center;
+     }
+     /*Changing catch-phrase display*/
+     .catch-phrase {
+         width:100%;
+         background:silver;
+     }
 
+     .catch-phrase {
+         text-align: center;
+     }
+     /*Changing navigation display*/
+     .nav-container {
+         width:100%;
+         background:white;
+     }
+
+     .nav-container ul{
+         justify-content: center;
+     } 
+}
+
+/*Changes to layout when screen size is less than or equal to 576px*/
+@media screen and (max-width:576px) {
+    /*Changing nav-ul flex direction to column*/
+    .nav-container ul {
+        flex-direction: column;
+        align-items: center;
+        border-top: 2px ridge red;
+        border-bottom: 2px ridge red;
+    }
+    .nav-container li {
+        border: none;
+        line-height: 150%;
+        
     }
 }
+
 
 
 /*bottom to top anchor cover - ideas from googling - having trouble with this part
