--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 /*Hide DIV with aria-label inside so it doesn't take up space in layout*/
+/*DIDN'T HAVE INTENDED PURPOSE.  ASK TUTOR*/
 .hide {
     display:hidden;
 }
@@ -79,23 +80,25 @@ body {
     flex-direction:column;
     justify-content: space-evenly;
 
-    height:900px;
+    height:auto;
     margin-right: 2.5%;
     margin-left: 2.5%;
 }
 
 .main-container h2 {
     width: 15%;
-    padding-top: 10px;
-    padding-right:15px;
+    padding-right: 2%;
     text-align:right;
 
 }
 
 .main-container div {
     width:80%;
-    padding-top: 10px;
-    padding-left:15px;
+    height:auto;
+    padding-top: 1%;
+    padding-right: 0%;
+    padding-bottom: 1%;
+    padding-left:2%;
 }
 
 .aboutme-container,
@@ -190,6 +193,36 @@ body {
      .nav-container ul{
          justify-content: center;
      } 
+
+    /*Changing AboutMe, Work, and ContactMe containers to display as column*/
+    .contactme-container {
+    flex-direction: column;
+    align-items:center;
+    }
+         /*Changing appearance of items inside ContactMe section*/
+    .contactme-container h2 {
+        width:100%;
+        background-color: rgb(82, 81, 81);
+        color:white;
+        text-align:center;
+        border:none;
+        padding:0;
+    }
+
+    .contactme-container div {
+        width: 100%;
+        padding: 0%;
+    }
+
+    .contactinfo-container ul{
+        flex-direction:column;
+        align-items: center;
+        line-height: 200%;
+    }
+
+    .contactinfo-container a {
+        color: red;
+    }
 }
 
 /*Changes to layout when screen size is less than or equal to 576px*/
@@ -203,9 +236,32 @@ body {
     }
     .nav-container li {
         border: none;
-        line-height: 150%;
-        
+        line-height: 150%;    
     }
+
+    /*Changing AboutMe, Work, and ContactMe containers to display as column*/
+    .aboutme-container {
+        flex-direction: column;
+        align-items:center;
+    }
+    /*Changin appearance of items insdide AboutMe*/
+    .aboutme-container h2 {
+        width:100%;
+        background-color: rgb(82, 81, 81);
+        color:white;
+        text-align:center;
+        border:none;
+        padding:0;
+    }
+
+    .aboutme-container div {
+        width:auto;
+        padding:1%;
+    }
+
+
+
+
 }
 
 
