Modified media display for AboutMe section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ body {
 
 }
 
-/*Main container styles*/
+/*Main container styles - outer most wrapper (level 0) in main section*/
 .main-container {
     display:flex;
     flex-direction:column;
@@ -92,17 +92,6 @@ body {
 
 }
 
-.aboutme-headshot {
-    width:100px;
-    height:100px;
-    display: inline;
-    float:inline-start;
-    border-radius: 25px;
-    border: 5px solid white;
-    margin: auto;
-    
-}
-
 .main-container div{
     width:80%;
     height:auto;
@@ -112,17 +101,15 @@ body {
     padding-left:2%;
 }
 
+/*Main-sections - style for wrappers insde main (level 1)*/
 .aboutme-container,
 .work-container,
 .contactme-container {
+    width:100%;
     display:flex;
     flex: row wrap;
     margin-top:10px;
     margin-bottom:15px;
-}
-
-.aboutme-container {
-    height: 20%;
 }
 
 .aboutme-container h2,
@@ -133,20 +120,38 @@ body {
     border-right: 2px double red;
 }
 
+/*Styles specific to the AboutMe wrapper*/
+.aboutme-container {
+    height: 20%;
+}
+
+
 .aboutme-container .aboutme-info-container {
     display: flex;
     color: rgb(82, 81, 81)
 }
-.work-container div,
-.contactme-container div {
-    color:rgb(82, 81, 81)
+
+.aboutme-headshot {
+    width:100px;
+    height:100px;
+    display: inline;
+    float:inline-start;
+    border-radius: 25px;
+    border: 5px solid white;
+    margin: auto 1% auto 1%;
 }
 
+.aboutme-info-container p {
+    text-align: justify;
+}
+
+/*Styles specific to Projects wrapper*/
 .work-container {
     height: 70%;
 }
 
 
+/*Styles specific to ContactMe wrapper*/
 .contactme-container {
     height: 10%;
 }
@@ -208,7 +213,27 @@ body {
          justify-content: center;
      } 
 
-    /*Changing AboutMe, Work, and ContactMe containers to display as column*/
+    /*Changing AboutMe to display as column*/
+    .aboutme-container {
+        flex-direction: column;
+        align-items:center;
+    }
+    /*Changing appearance of items insdide AboutMe*/
+    .aboutme-container h2 {
+        width:100%;
+        background-color: rgb(82, 81, 81);
+        color:white;
+        text-align:center;
+        border:none;
+        padding:0;
+    }
+
+    .aboutme-container div {
+        width:auto;
+        padding:1%;
+    }
+        
+     /*Changing ContactMe containers to display as column*/
     .contactme-container {
     flex-direction: column;
     align-items:center;
@@ -253,25 +278,7 @@ body {
         line-height: 150%;    
     }
 
-    /*Changing AboutMe, Work, and ContactMe containers to display as column*/
-    .aboutme-container {
-        flex-direction: column;
-        align-items:center;
-    }
-    /*Changin appearance of items insdide AboutMe*/
-    .aboutme-container h2 {
-        width:100%;
-        background-color: rgb(82, 81, 81);
-        color:white;
-        text-align:center;
-        border:none;
-        padding:0;
-    }
 
-    .aboutme-container div {
-        width:auto;
-        padding:1%;
-    }
 
 
 
