--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 input, select, option, optgroup, textarea, button,
-pre, code {
+pre, code, address {
   font-size: 100%;
   font-family: inherit;
 }
