--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,17 @@
     padding:0px;
 }
 
+:root {
+    --primary: rgb(82, 81, 81);
+    --secondary: rgb(228, 228, 228);
+    --tertiary: white;
+    --pop: red;
+}
+
 /*Setting the font for the body*/
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color:rgb(228, 228, 228);
+    background-color:var(--secondary);
 }
 
 /*Header styles*/
@@ -35,7 +42,7 @@ body {
 
     /*formatting items within the header flex-box*/
 .name h1{
-    color:red;
+    color:var(--pop);
     font-size:3.5em;
     margin-right: 1vw;
 }
@@ -45,7 +52,7 @@ body {
 }
 
 .catch-phrase h2, h3 {
-    color:rgb(82, 81, 81);
+    color:var(--primary);
     font-size:20px;
     margin-right:1vw;
 }
@@ -68,19 +75,19 @@ body {
 .nav-container a {
     /*setting up transition appearance*/
     background-repeat: no-repeat;
-    background-image: linear-gradient(180deg, rgb(255,0,0) 0%, rgb(255,0,0) 100%);
+    background-image: linear-gradient(180deg, var(--pop) 0%, var(--pop) 100%);
     background-position: bottom;
     background-size: 100% 0.1em;
     /*formatting anchor text*/
     text-decoration: none;
-    color: rgb(82, 81, 81);
+    color: var(--primary);
     font-size: 150%;
 }
     /*Adding transition when links are hovered over*/
 .nav-container a:hover {
     transition: all 0.25s ease-in;
     background-size: 100% 100%;
-    color: black;
+    color: var(--tertiary);
 }
 
 
@@ -126,9 +133,9 @@ body {
 .aboutme-container h2,
 .work-container h2,
 .contactme-container h2 {
-    color:rgb(82, 81, 81);
+    color:var(--primary);
     font-size:2em;
-    border-right: 2px double red;
+    border-right: 2px double var(--pop);
 }
 
 /*Styles specific to the AboutMe wrapper*/
@@ -139,7 +146,7 @@ body {
 
 .aboutme-container .aboutme-info-container {
     display: flex;
-    color: rgb(82, 81, 81)
+    color: var(--primary);
 }
 
 .aboutme-headshot {
@@ -148,7 +155,7 @@ body {
     display: inline;
     float:inline-start;
     border-radius: 25px;
-    border: 5px solid rgb(82, 81, 81);
+    border: 5px solid var(--primary);
     margin: auto 1% auto 1%;
 }
 
@@ -173,7 +180,7 @@ body {
 .projects a {
     display:block;
     border-radius: 25px;
-    border: 5px solid rgb(82, 81, 81);
+    border: 5px solid var(--primary);
     margin: 2%;
  }
 
@@ -234,19 +241,19 @@ body {
 
 .contactinfo-container a {
     background-repeat: no-repeat;
-    background-image: linear-gradient( red 0%, red 100%);
+    background-image: linear-gradient( var(--pop) 0%, var(--pop) 100%);
     background-position: bottom;
     background-size: 100% 0.1em;
 
     text-decoration:none;
-    color: rgb(82, 81, 81);
+    color: var(--primary);
     font-size: 150%;
 }
 
 .contactinfo-container a:hover {
     transition: all 0.25s ease-in;
     background-size: 100% 100%;
-    color: black;
+    color: var(--tertiary);
 }
 
 
@@ -260,15 +267,16 @@ body {
     /*Changing name display*/ 
     .name {
          width:100%;
-         background:black
+         background:var(--pop)
      }
      .name h1 {
          text-align:center;
+         color: var(--primary)
      }
      /*Changing catch-phrase display*/
      .catch-phrase {
          width:100%;
-         background:silver;
+         background:var(--secondary);
      }
 
      .catch-phrase {
@@ -277,7 +285,7 @@ body {
      /*Changing navigation display*/
      .nav-container {
          width:100%;
-         background:white;
+         background:var(--tertiary);
      }
 
      .nav-container ul{
