--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@ body {
     text-decoration: none;
     color: var(--primary);
     font-size: 150%;
+
 }
     /*Adding transition when links are hovered over*/
 .nav-container a:hover {
@@ -195,13 +196,19 @@ body {
     margin: 2%;
     /*Creates shadow effect on inside of box: x-offset, y-offset, spread, color*/
     box-shadow: inset 60px 60px 120px var(--primary);
+    background-blend-mode: soft-light;
+  
  }
 
+ .projects a:hover {
+     transition: all, 3s, ease-in;
+     background-color:var(--secondary);
+ }
 
 .projects .html-css {
     background-image: url("../images/html_css_placeholder.png");  
     background-size: contain;
-    
+       
     /*flex-item within projects container*/
     flex: 0 0 100%;
     height: 300px;     
