--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ body {
 .work-container {
     height: 70%;
 }
-
+    /*setting flex properties for project wrapper*/
 .projects {
     display: flex;
     flex-flow: row wrap;
@@ -178,7 +178,7 @@ body {
     align-content: center;
 
 }
-
+    /*setting shared project anchor properties*/
 .projects a {
     text-decoration: none;
     display:block;
@@ -188,47 +188,47 @@ body {
     /*Creates shadow effect on inside of box: x-offset, y-offset, spread, color*/
     box-shadow: inset 60px 60px 120px var(--primary);
     background-blend-mode: soft-light;
-  
  }
 
  .projects a:hover {
      transition: all, 3s, ease-in;
      background-color:var(--secondary);
  }
+    /*setting size of first project to be the largest*/
+ .projects a:first-child {
+         /*flex-item within projects container*/
+    flex: 0 0 100%;
+    height: 300px;   
+ }
+    /*setting size of project 2-5*/
+ .projects a:nth-child(n+2) {
+    flex: 0 0 46%;
+    height: 150px;
+ }
 
 .projects .html-css {
     background-image: url("../images/html_css_placeholder.png");  
     background-size: contain;
-       
-    /*flex-item within projects container*/
-    flex: 0 0 100%;
-    height: 300px;     
 }
 
 .projects .javascript {
     background-image: url("../images/javascript_resized.jpg");
-    flex: 0 0 46%;
-    height: 150px;
 }
 
 .projects .mysql {
     background-image: url("../images/mysql_resized.jpg");
-    flex: 0 0 46%;
-    height: 150px;
 }
 
 .projects .nodejs {
     background-image: url("../images/nodejs_resized.jpg");
-    flex: 0 0 46%;
-    height: 150px;
+
 }
 
 .projects .python {
     background-image: url("../images/python_resized.png");
-    flex: 0 0 46%;
-    height: 150px;
 }
 
+    /*setting h2 properties shared by all applications 1-5*/
 .projects h2 {
     display:inline-block;
     border-right: 3px solid var(--primary);
@@ -239,7 +239,7 @@ body {
     text-decoration: none;
     font-size:1.5em;
 }
-
+    /*setting h2 displayed on first application*/
 .projects a:first-child h2 {
     border-top-right-radius:10px;
     border-bottom-right-radius:10px;
@@ -247,7 +247,7 @@ body {
     top:235px;
     width:15%;
 }
-
+    /*setting h2 displayed on applications 2-5*/
 .projects a:nth-child(n+2) h2 {
     border-top-right-radius:10px;
     border-bottom-right-radius:10px;
@@ -279,7 +279,7 @@ body {
     align-items: center;
     align-content:center;
 }
-
+    
 .contactinfo-container a {
     background-repeat: no-repeat;
     background-image: linear-gradient( var(--pop) 0%, var(--pop) 100%);
@@ -290,7 +290,7 @@ body {
     color: var(--primary);
     font-size: 150%;
 }
-
+    /*Setting anchor transition for contact information*/
 .contactinfo-container a:hover {
     transition: all 0.25s ease-in;
     background-size: 100% 100%;
@@ -358,6 +358,7 @@ body {
         padding:1%;
     }
 
+    /*Keeping header on top of image same color scheme*/
     .work-container .projects h2 {
         border-right: 3px solid var(--primary);
         border-top:3px solid var(--primary);
@@ -411,10 +412,7 @@ body {
         width:100%;
     }
     /*Changing Work Images (2-5) to display 100% of width*/
-    .projects .javascript,
-    .projects .mysql,
-    .projects .nodejs,
-    .projects .python {
+    .projects a:nth-child(n+2) {
         flex:0 0 100%;
     }
 }
