--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     padding:0px;
 }
 
+/*Creating color variables*/
 :root {
     --primary: rgb(82, 81, 81);
     --secondary: rgb(228, 228, 228);
@@ -140,16 +141,14 @@ body {
     border-right: 2px double var(--pop);
 }
 
-/*Styles specific to the AboutMe wrapper*/
-.aboutme-container {
-    height: 20%;
-}
-
-
+/*Styles specific to the AboutMe section*/
 .aboutme-container .aboutme-info-container {
     display: flex;
     color: var(--primary);
-    margin: 2%;
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom:1%;
+    padding-left: 2.5%;
 }
 
 .aboutme-headshot {
@@ -159,18 +158,16 @@ body {
     float:inline-start;
     border-radius: 25px;
     border: 5px solid var(--primary);
-    margin: auto 1% auto 1%;
+    margin: auto 2% auto 2%;
 }
 
 .aboutme-info-container p {
     text-align: justify;
+
 }
 
-/*Styles specific to Projects wrapper*/
-.work-container {
-    height: 70%;
-}
-    /*setting flex properties for project wrapper*/
+/*Styles specific to Projects section*/
+/*setting flex properties for project wrapper*/
 .projects {
     display: flex;
     flex-flow: row wrap;
@@ -180,7 +177,6 @@ body {
 
     flex:50%;
     margin-right:1%;
-
 }
     /*setting shared project anchor properties*/
 .projects a {
@@ -201,7 +197,7 @@ body {
     /*setting size of first project image to be the largest*/
  .projects a:first-child {
     flex: 0 0 96%;
-    height: 300px;   
+    height: 300px;  
  }
     /*setting size of project images 2-5*/
  .projects a:nth-child(n+2) {
@@ -261,10 +257,6 @@ body {
 
 
 /*Styles specific to ContactMe wrapper*/
-.contactme-container {
-    height: 10%;
-}
-
 .contactinfo-container {
     display: flex;
     flex-direction: column;
