--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,15 +20,14 @@ body {
 
 /*Header styles*/
 .background-image {
- background-image: url("../images/multi_dim_image.jpg");
- background-size: cover;
- background-position: center;
- width: 100%;
- height: 350px;
-}
+    background-image: url("../images/multi_dim_image.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 350px;
+    }
 
 /*Hide DIV with aria-label inside so it doesn't take up space in layout*/
-/*DIDN'T HAVE INTENDED PURPOSE.  ASK TUTOR*/
 .hide {
     display:hidden;
 }
@@ -44,7 +43,8 @@ body {
     /*formatting items within the header flex-box*/
 .name h1{
     color:var(--pop);
-    font-size:4em;
+    font-size:4.5em;
+    font-weight: 500;
     margin-right: 1vw;
 }
 
@@ -55,6 +55,7 @@ body {
 .catch-phrase h2, h3 {
     color:var(--primary);
     font-size:1.5em;
+    font-weight: 500;
     margin-right:1vw;
 }
 
@@ -70,7 +71,7 @@ body {
     display: inline-block;
     margin-right:1vw;
     font-size: 1em;
-    font-weight: bold;
+    
 }
 
 .nav-container a {
@@ -98,7 +99,6 @@ body {
     display:flex;
     flex-direction:column;
     justify-content: space-evenly;
-
     height:auto;
     margin-right: 2.5%;
     margin-left: 2.5%;
@@ -108,7 +108,7 @@ body {
     width: 20%;
     padding-right: 2%;
     text-align:right;
-
+    font-weight: 500;
 }
 
 .main-container .aboutme-info-container,
@@ -143,6 +143,7 @@ body {
 
 /*Styles specific to the AboutMe section*/
 .aboutme-container .aboutme-info-container {
+    flex-grow: .40;
     display: flex;
     color: var(--primary);
     margin-left: 1%;
@@ -174,33 +175,33 @@ body {
     justify-content: center;
     align-items:center;
     align-content: center;
-
     flex:50%;
     margin-right:1%;
 }
-    /*setting shared project anchor properties*/
-.projects a {
+    /*setting shared project button properties*/
+.projects button {
     text-decoration: none;
     display:block;
+    position: relative;
     border-radius: 25px;
     border: 5px solid var(--primary);
     margin: 2%;
     /*Creates shadow effect on inside of box: x-offset, y-offset, spread, color*/
     box-shadow: inset 60px 60px 120px var(--primary);
-    background-blend-mode: soft-light;
  }
 
- .projects a:hover {
+ .projects button:hover {
+     background-blend-mode: soft-light;
      transition: all, 3s, ease-in;
      background-color:var(--secondary);
  }
     /*setting size of first project image to be the largest*/
- .projects a:first-child {
+ .projects button:first-child {
     flex: 0 0 96%;
     height: 300px;  
  }
     /*setting size of project images 2-5*/
- .projects a:nth-child(n+2) {
+ .projects button:nth-child(n+2) {
     flex: 0 0 46%;
     height: 150px;
  }
@@ -244,23 +245,25 @@ body {
     padding-bottom: 2%;
     font-size:1em;
 }
+
     /*setting h2 displayed on first application*/
-.projects a:first-child h2 {
+.projects button:first-child h2 {
     border-top-right-radius:10px;
     border-bottom-right-radius:10px;
-    position: relative;
+    position: absolute;
     top:175px;
+    left: 0px;
     width:150px;
 }
     /*setting h2 displayed on applications 2-5*/
-.projects a:nth-child(n+2) h2 {
+.projects button:nth-child(n+2) h2 {
     border-top-right-radius:10px;
     border-bottom-right-radius:10px;
-    position: relative;
+    position: absolute;
     top:65px;
+    left: 0px;
     width:100px;
 }
-
 
 /*Styles specific to ContactMe wrapper*/
 .contactinfo-container {
@@ -289,7 +292,7 @@ body {
 
     text-decoration:none;
     color: var(--primary);
-    font-size: 150%;
+    font-size: 1.5em;
 }
     /*Setting anchor transition for contact information*/
 .contactinfo-container a:hover {
@@ -298,7 +301,34 @@ body {
     color: var(--tertiary);
 }
 
+/*Custom sytle for the modals*/
+.custom-modal {
+    background-color: var(--secondary);
+    color: var(--primary);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 30%;
+    width: 75%;
+    padding: 50px;
+}
 
+.custom-modal p {
+    padding-bottom: 10px;
+    font-size: 1.5em;
+    font-weight: bolder;
+}
+.custom-modal a {
+    padding-top:5px;
+    padding-bottom: 10px;
+    font-size: 1.25em;
+}
+
+.custom-modal a:hover {
+    color: var(--pop);
+}
 
 /*Changes to layout when screen size is between 576px and 992px*/
 @media screen and (max-width: 992px) {
@@ -306,16 +336,18 @@ body {
     .header-container {
         justify-content:space-around;
     }
+
     /*Changing name display*/ 
     .name {
          width:100%;
          background:var(--pop);
-
      }
+
      .name h1 {
          text-align:center;
           color: var(--primary) 
      }
+
      /*Changing catch-phrase display*/
      .catch-phrase {
          width:100%;
@@ -343,6 +375,7 @@ body {
         align-items:center;
         align-content:center;
     }
+
     /*Changing appearance of items insdide AboutMe, Work, and Contact Me*/
     .aboutme-container h2,
     .contactme-container h2,
@@ -365,9 +398,8 @@ body {
         width: 100%;
         margin-left:2%;
         padding: 1%;
-
-
     }
+
     .work-container .projects h2 {
         border-right: 3px solid var(--primary);
         border-top:3px solid var(--primary);
@@ -379,20 +411,7 @@ body {
         padding-bottom: 2%;
         font-size:1em;
     }
-
-    /*setting h2 displayed on first application*/
-    .projects a:first-child h2 {
-        position: relative;
-        top:175px;
-        width:150px;
-    }
-        /*setting h2 displayed on applications 2-5*/
-    .projects a:nth-child(n+2) h2 {
-        position: relative;
-        top:65px;
-        width:100px;
-    }
-       
+     
     /*Additional modifications for Contact Me Container*/
     .contactme-container .contactinfo-container {
         width: 100%;
@@ -408,8 +427,6 @@ body {
     .contactinfo-container a {
         color: var(--pop);
     }
-
-
 }
 
 /*Changes to layout when screen size is less than or equal to 576px*/
@@ -421,6 +438,7 @@ body {
         border-top: 2px ridge var(--pop);
         border-bottom: 2px ridge var(--pop);
     }
+
     .nav-container li {
         border: none;
         line-height: 200%;    
@@ -437,7 +455,7 @@ body {
         width:100%;
     }
     /*Changing Work Images (2-5) to display 100% of width*/
-    .projects a:nth-child(n+2) {
+    .projects button:nth-child(n+2) {
         flex:0 0 96%;
     }
 }
