--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,16 +310,26 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 30%;
+    height: 85%;
     width: 75%;
     padding: 50px;
 }
 
-.custom-modal p {
-    padding-bottom: 10px;
-    font-size: 1.5em;
+.custom-modal h3 {
+    color: var(--pop);
+    font-size: 1.75em;
     font-weight: bolder;
 }
+.custom-modal h4 {
+    font-weight: bolder;
+    font-size: 1.5em;
+}
+
+.custom-modal p {
+    padding-bottom: 10px;
+    font-size: 1.25em;
+}
+
 .custom-modal a {
     padding-top:5px;
     padding-bottom: 10px;
