--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,6 +302,7 @@ body {
 }
 
 /*Custom sytle for the modals*/
+/*Resaving - height isn't being seen when pushed up*/
 .custom-modal {
     background-color: var(--secondary);
     color: var(--primary);
