Added project 2 as work 5.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ body {
 }
 
 .projects #work5 {
-    background-image: url("../images/python_resized.png");
+    background-image: url("../images/sharespace_resize.png");
     background-size: cover;
 }
 
